--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/time-studies.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/tooltips.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/vis-network.css">
-  <!-- Mobile-specific stylesheet -->
+  <!-- Mobile-specific stylesheets -->
   <link rel="stylesheet" type="text/css" href="stylesheets/mobile.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/ios-fixes.css">
 </head>
 <body>
   <div id="browser-warning">
