--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
-  <link rel="apple-touch-startup-image" href="icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon.png">
+  <link rel="apple-touch-startup-image" href="/icon.png">
   <meta name="apple-mobile-web-app-title" content="Antimatter Dimensions">
   <!-- PWA manifest reference -->
   <link rel="manifest" href="manifest.json">
@@ -34,6 +34,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/mobile.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/ios-fixes.css">
 </head>
+  <base href="/AntimatterDimensions/">
 <body>
   <div id="browser-warning">
     Your browser is not supported.
